fixes with routes, queries to database and mappings